// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghReleaseChangelog valid 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "rcp",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "## @rcp/abc

### Bug Fixes

*   should remove container firstly ([4e0d087](https://github.com/imcuttle/rcp/commit/4e0d087))
*   should remove container firstly ([8dfcc84](https://github.com/imcuttle/rcp/commit/8dfcc84))
*   use extendDictionary ([330edf0](https://github.com/imcuttle/rcp/commit/330edf0))
*   use.fetcher with key ([fe45ac1](https://github.com/imcuttle/rcp/commit/fe45ac1))
*   use.i18ncontext ([da70207](https://github.com/imcuttle/rcp/commit/da70207))

### Features

*   add c.preventfastop ([44bf84f](https://github.com/imcuttle/rcp/commit/44bf84f))
*   add eq option ([631dfe7](https://github.com/imcuttle/rcp/commit/631dfe7))
*   add hook ([300eb94](https://github.com/imcuttle/rcp/commit/300eb94))
*   add use.i18n ([8f2b256](https://github.com/imcuttle/rcp/commit/8f2b256))
*   allow customized eq function ([79e92ce](https://github.com/imcuttle/rcp/commit/79e92ce))
*   remove global option ([55f611a](https://github.com/imcuttle/rcp/commit/55f611a))
*   use es6 instead of es5 ([3dcc2a8](https://github.com/imcuttle/rcp/commit/3dcc2a8))
*   util.createlogger log alias to info ([8757ae8](https://github.com/imcuttle/rcp/commit/8757ae8))

### Performance Improvements

*   set defaultLanguage to defaultProps ([cf01859](https://github.com/imcuttle/rcp/commit/cf01859))

### BREAKING CHANGES

*   use es6 instead of es5
*   remove global option

**Full Changelog**: [2.0.0](https://github.com/imcuttle/rcp/commits/2.0.0)",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "imcuttle",
      "prerelease": undefined,
      "repo": "rcp",
      "tag_name": "2.0.0",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelogMonorepo lerna 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)

#### b

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo pnpm 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)

#### b

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo same-version-root-changelog 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo workspaces 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)

#### b

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;
